# timewindow

./: Cargo.toml  LICENSE  README.md
src/: derived.rs  iter.rs  lib.rs  source.rs  window.rs
src/sources/: interval.rs  mod.rs  schedule.rs
