[package]
name = "timewindow"
version = "0.1.1"
edition = "2024"
authors = ["Justin Schwab"]
description = "Generic time-window generation for recurring, overlapping, and metadata-rich intervals"
repository = "https://github.com/JusSchw/timewindow"
documentation = "https://docs.rs/timewindow"
readme = "README.md"
license = "MIT"
keywords = ["time", "window", "interval"]
categories = ["date-and-time"]

[features]
default = ["sources"]
sources = []

[dependencies]
chrono = "0.4"
